# osmAG

./: LICENSE  README.md  ReadME_osm_generetion.txt
ag_osm_generator/: CMakeLists.txt  ReadMe
ag_osm_generator/maps/: test.osm  test1.osm
ag_osm_generator/test/: test_osm_generation.cpp
osmAG/: CMakeLists.txt
osmAG/data/fix_id/: ShanghaiTech_merge_2.osm
osmAG/data/semantic_tags/: SIST_1.osm
osmAG/data/show/: shanghaitech_merge_v1.osm  sist_f1_v5.osm  sist_f2_V2.osm  sist_merge_v1.osm
osmAG/include/: WGS84toCartesian.h  area.h  area_grid_map.h  areagraph.h  astarcal.h  base_area.h  data_load_save.h  node.h  passage.h  pathgraph.h  visualization.h
osmAG/src/: area.cpp  astarcal.cpp  data_load_save.cpp  node.cpp  path_graph.cpp
tinyxml2/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  install_manifest.txt  tinyxml2.pc  tinyxml2.pc.gen
